<resources>
    <string name="app_name">AndroidCore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Titles -->
    <string name="blur_title">Select Blur Amount</string>

    <!-- Buttons -->
    <string name="select_image">Select Image</string>
    <string name="go">Go</string>
    <string name="see_file">See File</string>

    <!-- Content descriptions -->
    <string name="description_image">The image to blur and save.</string>

    <!-- Blur levels -->
    <string name="blur_lv_1">A little blurred</string>
    <string name="blur_lv_2">More blurred</string>
    <string name="blur_lv_3">The most blurred</string>
    <string name="cancel_work">Cancel Work</string>

    <!-- Messages -->
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>

    <string name="sort_by_name">By name</string>
    <string name="sort_by_rating">By rating</string>
    <string name="sort_by_birth">By birth</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="time_is_running">Time\'s running! %1$s</string>
    <string name="get_back">Hey you! Get back! :]</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="start_progress">Start</string>
    <string name="bound_service">Bound Service</string>
    <string name="foreground_service">Foreground Service</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fetch">Fetch</string>
    <string name="textview">TextView</string>
    <string name="title_activity_compose">ComposeActivity</string>
</resources>